--- a/views/pageNotFound.html
+++ b/views/pageNotFound.html
@@ -6,6 +6,17 @@
     <title>Error: Page Not Found</title>
 </head>
 <body>
-    <h1>Page Not Found Sorry :( </h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/">Shop</a></li>
+                <li><a href="/admin/add-product">Add Product</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Page Not Found Sorry :( </h1>
+    </main>
+   
 </body>
 </html>
