--- a/views/add-product.html
+++ b/views/add-product.html
@@ -5,91 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product Page</title>
-
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            font-family: sans-serif;
-        }
-
-        main {
-            padding: 1rem;
-        }
-
-        .main-header {
-            width: 100%;
-            height: 3.5rem;
-            background-color: #79a0ce;
-            padding: 0 1.5rem;
-        }
-
-        .main-header__nav {
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-
-        .main-header__item-list {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        .main-header__item {
-            margin: 0 1rem;
-            padding: 0;
-        }
-
-        .main-header__item a {
-            text-decoration: none;
-            color: black;
-        }
-
-        .main-header__item a:hover,
-        .main-header__item a:active,
-        .main-header__item a.active {
-            color: #fbfbfb;
-        }
-
-        .product-form {
-            width: 20rem;
-            max-width: 90%;
-            margin: auto;
-        }
-
-        .form-control {
-            margin: 1rem 0;
-        }
-
-        .form-control label,
-        .form-control input {
-            display: block;
-            width: 100%;
-        }
-
-        .form-control input {
-            border: 2px solid #79a0ce;
-            font: inherit;
-            border-radius: 4px;
-        }
-
-        button {
-            font: inherit;
-            border: 1px solid #3e00a1;
-            color: #3e00a1;
-            background: white;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        button:hover,
-        button:active {
-            background-color: #79a0ce;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/product.css">
 
 </head>
 
