--- a/views/pageNotFound.html
+++ b/views/pageNotFound.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error: Page Not Found</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Shop</a></li>
-                <li><a href="/admin/add-product">Add Product</a></li>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Page Not Found Sorry :( </h1>
-    </main>
+    <h1>Page Not Found!</h1>
    
 </body>
 </html>
