--- a/views/404.html
+++ b/views/404.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error: Page Not Found</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Page Not Found</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
     <header class="main-header">
         <nav class="main-header__nav">
@@ -16,6 +19,6 @@
         </nav>
     </header>
     <h1>Page Not Found!</h1>
-   
 </body>
+
 </html>
