--- a/views/add-product.html
+++ b/views/add-product.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product Page</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Add Product</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
-
 </head>
 
 <body>
@@ -22,12 +23,12 @@
 
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
-
             <div class="form-control">
+                <label for="title">Title</label>
                 <input type="text" name="title" id="title">
-
             </div>
-            <button type="submit">Add Product</button>
+
+            <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
 </body>
