--- a/views/shop.html
+++ b/views/shop.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop Page</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Add Product</title>
     <link rel="stylesheet" href="/css/main.css">
-
+    <link rel="stylesheet" href="/css/product.css">
 </head>
+
 <body>
     <header class="main-header">
         <nav class="main-header__nav">
@@ -20,6 +23,24 @@
     <main>
         <h1>My Products</h1>
         <p>List of all the products...</p>
+        <!-- <div class="grid">
+            <article class="card product-item">
+                <header class="card__header">
+                    <h1 class="product__title">Great Book</h1>
+                </header>
+                <div class="card__image">
+                    <img src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book">
+                </div>
+                <div class="card__content">
+                    <h2 class="product__price">$19.99</h2>
+                    <p class="product__description">A very interesting book about so many even more interesting things!</p>
+                </div>
+                <div class="card__actions">
+                    <button class="btn">Add to Cart</button>
+                </div>
+            </article>
+        </div> -->
     </main>
 </body>
+
 </html>
