--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,7 @@ main {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #00695c;
+  background-color: #0b0069;
   padding: 0 1.5rem;
 }
 
@@ -94,8 +94,8 @@ main {
 
 .btn {
   font: inherit;
-  border: 1px solid #00695c;
-  color: #00695c;
+  border: 2px solid #0b0069;
+  color: #0b0069;
   background: white;
   border-radius: 3px;
   cursor: pointer;
@@ -103,6 +103,6 @@ main {
 
 .btn:hover,
 .btn:active {
-  background-color: #00695c;
+  background-color: #0b0069;
   color: white;
 }
