--- a/views/404.pug
+++ b/views/404.pug
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        <link rel="stylesheet" href="/css/main.css">
-        title #{pageTitle}
-    body
-        header.main-header 
-                nav.main-header__nav
-                    ul.main-header__item-list
-                        li.main-header__item
-                            a.active(href="/") Shop
-                        li.main-header__item
-                            a.active(href="/admin/add-product") Add Product
-        main
-            h1 Sorry Page Not Found!
+extends layouts/main-layouts.pug
+
+block content
+    h1 Sorry Page Not Found!
