ADMIN AND SHOP FOLDER ADDED, RESTRUCTURING BEGINS

--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,7 +1,7 @@
-<%- include('globalSharedFile/head.ejs')%>
+<%- include('../globalSharedFile/head.ejs')%>
 
 <body>
-    <%- include('globalSharedFile/navigation.ejs')%>
+    <%- include('../globalSharedFile/navigation.ejs')%>
 
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
@@ -13,4 +13,4 @@
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
-<%- include('globalSharedFile/end.ejs')%>
+<%- include('../globalSharedFile/end.ejs')%>
