--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,7 +1,7 @@
-<%- include('globalSharedFile/head.ejs')%>
+<%- include('../globalSharedFile/head.ejs')%>
 
 <body>
-    <%- include('globalSharedFile/navigation.ejs')%>
+    <%- include('../globalSharedFile/navigation.ejs')%>
 
     <main>
         <% if (prods.length > 0){%>
@@ -28,4 +28,4 @@
         <h1>Sorry :) No Product Found</h1>
        <% } %>
     </main>
-<%- include('globalSharedFile/end.ejs')%>
+<%- include('../globalSharedFile/end.ejs')%>
