--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -12,11 +12,12 @@
                     <h1 class="product__title"><%= product.title %></h1>
                 </header>
                 <div class="card__image">
-                    <img src="https://purepng.com/public/uploads/large/purepng.com-bookbookillustratedwrittenprintedliterature-1421526452123etpkk.png" alt="A Book">
+                    <img src="<%= product.imageUrl %>"
+                     alt="<%= product.title %>">
                 </div>
                 <div class="card__content">
-                    <h2 class="product__price">$19.99</h2>
-                    <p class="product__description">A very interesting book about so many even more interesting things!</p>
+                    <p class="product__description"><%= product.description %></p>
+                    <h2 class="product__price">$<%= product.price %></h2>
                 </div>
                 <div class="card__actions">
                     <button class="btn">Add to Cart</button>
