REFACTORED THE WHOLE FOLDER AND DESIGN WAS IMPROVED

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,8 @@
-<%- include('globalSharedFile/head.ejs')%>
+<%- include('includes/head.ejs') %>
+</head>
 
 <body>
-    <%- include('globalSharedFile/navigation.ejs')%>
+    <%- include('includes/navigation.ejs') %>
     <h1>Page Not Found!</h1>
-    
-<%- include('globalSharedFile/end.ejs')%>
+
+<%- include('includes/end.ejs') %>
