--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -3,7 +3,7 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-        <main>
-            <h1>Nothing there!</h1>
+        <main class="centered">
+            
         </main>
         <%- include('../includes/end.ejs') %>
