--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,7 +1,10 @@
-<%- include('../globalSharedFile/head.ejs')%>
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="../css/forms.css">
+    <link rel="stylesheet" href="/css/product.css">
+</head>
 
 <body>
-    <%- include('../globalSharedFile/navigation.ejs')%>
+   <%- include('../includes/navigation.ejs') %>
 
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
@@ -25,4 +28,4 @@
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
-<%- include('../globalSharedFile/end.ejs')%>
+<%- include('../includes/end.ejs') %>
