--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,5 +1,6 @@
-<%- include('../globalSharedFile/head.ejs')%>
+<%- include('../includes/head.ejs') %>
+    </head>
 
-<body>
-    <%- include('../globalSharedFile/navigation.ejs')%>
-    <%- include('../globalSharedFile/end.ejs')%>
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <%- include('../includes/end.ejs') %>
