--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,15 @@ form {
   text-align: center;
 }
 
+.image {
+  height: 20rem;
+}
+
+.image img {
+  height: 100%;
+}
+
+
 .main-header {
   width: 100%;
   height: 3.5rem;
