--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -18,6 +18,13 @@
                         </li>
                     <% }) %>
                 </ul>
+                <hr>
+                <div class="centered">
+                    <form action="/create-order" method="POST">
+                        <button class="btn" type="submit">Order Now</button>
+                    </form>
+                </div>
+                
             <% } else { %>
                 <h1>No Products in Cart! :(</h1>
             <% } %>
