--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,5 +1,5 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/cart.css">
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
@@ -9,7 +9,7 @@
                 <ul class="cart__item-list">
                     <% products.forEach(p => { %>
                         <li class="cart__item">
-                            <p><%= p.title %> </p>
+                            <h1><%= p.title %></h1>
                             <h2>Quantity: <%= p.quantity %></h2>
                             <form action="/cart-delete-item" method="POST">
                                 <input type="hidden" value="<%= p._id %>" name="productId">
@@ -21,12 +21,12 @@
                 <hr>
                 <div class="centered">
                     <form action="/create-order" method="POST">
-                        <button class="btn" type="submit">Order Now</button>
+                        <button type="submit" class="btn">Order Now!</button>
                     </form>
                 </div>
                 
             <% } else { %>
-                <h1>No Products in Cart! :(</h1>
+                <h1>No Products in Cart!</h1>
             <% } %>
         </main>
         <%- include('../includes/end.ejs') %>
