--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li class="main-header__item">
-                    <a class="<%= path === '/admin/products-list' ? 'active' : '' %>" href="/admin/products">Admin Products
+                    <a class="<%= path === '/admin/products-list' ? 'active' : '' %>" href="/admin/products-list">Admin Products
                     </a>
                 </li>
             <% } %>
@@ -61,7 +61,7 @@
             </a>
         </li>
         <li class="mobile-nav__item">
-            <a class="<%= path === '/admin/products-list' ? 'active' : '' %>" href="/admin/products">Admin Products
+            <a class="<%= path === '/admin/products-list' ? 'active' : '' %>" href="/admin/products-list">Admin Products
             </a>
         </li>
     </ul>
