--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -12,7 +12,7 @@
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
             </div>
-            <div class="form-control">
+            <div class="form-control"> 
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
@@ -20,6 +20,7 @@
                 <label for="confirmPassword">Confirm Password</label>
                 <input type="password" name="confirmPassword" id="confirmPassword">
             </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Sign Up</button>
         </form>
     </main>
