RESSET PASSWORD VIEW CREATED

--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -14,15 +14,8 @@
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
             </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Login</button>
+            <button class="btn" type="submit">Reset Password</button>
         </form>
-        <div class="centered">
-            <a href="/reset-password"> Reset Password</a>
-        </div>
     </main>
 <%- include('../includes/end.ejs') %>
