--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -9,14 +9,24 @@
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <form class="login-form" action="/login" method="POST">
+        <form class="login-form" action="/login" method="POST" novalidate>
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
+                <input 
+                class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
+                type="email"
+                 name="email" 
+                 id="email"
+                 value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password">
+                <input
+                class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                 type="password"
+                  name="password" 
+                  id="password"
+                  value="<%= oldInput.password %>">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
