--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -9,7 +9,7 @@
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST" enctype="multipart/form-data" >
             <div class="form-control">
                 <label for="title">Title</label>
                 <input 
@@ -20,6 +20,13 @@
                  value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
             <div class="form-control">
+                <label for="image">Image</label>
+                <input
+                 type="file"
+                 name="image"
+                  id="image">
+            </div>
+            <!-- <div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input
                 class="<%= validationErrors.find(e => e.param === 'imageUrl') ? 'invalid' : '' %>"
@@ -27,7 +34,7 @@
                  name="imageUrl"
                   id="imageUrl" 
                   value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
-            </div>
+            </div> -->
             <div class="form-control">
                 <label for="price">Price</label>
                 <input 
