PAGINATION STARTED, LAYOUT IS ALSO DEFINED

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -223,6 +223,26 @@ form {
   color: white;
 }
 
+.pagination {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.pagination a {
+  text-decoration: none;
+  color:  #0b0069;
+  padding: 0.5rem;
+  border: 1px solid #0b0069;
+  border-radius: 5px;
+  margin: 0 1rem;
+}
+
+.pagination a:hover,
+.pagination a:active {
+  background:  #0b0069;
+  color: white;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
