PAGINATION ADDED SUCCESSFULLY

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -238,7 +238,8 @@ form {
 }
 
 .pagination a:hover,
-.pagination a:active {
+.pagination a:active,
+.pagination a.active {
   background:  #0b0069;
   color: white;
 }
