--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -17,11 +17,11 @@
                     <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
                 </li>
                 <li class="main-header__item">
-                    <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
+                    <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Your Products
                     </a>
                 </li>
                 <li class="main-header__item">
-                    <a class="<%= path === '/admin/products-list' ? 'active' : '' %>" href="/admin/products-list">Admin Products
+                    <a class="<%= path === '/admin/products-list' ? 'active' : '' %>" href="/admin/products-list">View Your Products
                     </a>
                 </li>
             <% } %>
@@ -62,11 +62,11 @@
             <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
         </li>
         <li class="mobile-nav__item">
-            <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
+            <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Your Products
             </a>
         </li>
         <li class="mobile-nav__item">
-            <a class="<%= path === '/admin/products-list' ? 'active' : '' %>" href="/admin/products-list">Admin Products
+            <a class="<%= path === '/admin/products-list' ? 'active' : '' %>" href="/admin/products-list">View Your Products
             </a>
         </li>
         <% } %>
